[package]
name = "lnd-grpc"
version = "0.1.0"
authors = ["Shaleen Jain <shaleen@jain.sh>"]
edition = "2018"
build = "build.rs"

[dependencies]
grpc            = "~0.6"
protobuf        = "~2"
futures            = "~0.1"
futures-cpupool    = "~0.1"
tls-api            = "~0.1"
tls-api-native-tls = "~0.1"
httpbis         = "~0.7"
#httpbis = { git = "https://github.com/stepancheg/rust-http2"}

[build-dependencies]
protoc-rust-grpc = "0.6.1"
